--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "id.dicoding.expertcourse"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -24,6 +24,7 @@ dependencies {
     def lifecycle_version = "2.0.0"
     def retrofit_version = "2.6.1"
     def room_version = "2.1.0"
+    def glide_version = "4.9.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.0.2"
@@ -37,6 +38,8 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     testImplementation "junit:junit:4.12"
     testImplementation "androidx.room:room-testing:$room_version"
