--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".DetailActivity" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +21,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name=".content_provider.FavoriteMovieProvider"
+            android:authorities="id.dicoding.expertcourse"
+            android:exported="true"
+            android:readPermission="id.dicoding.expertcourse.READ_DATABASE"
+            android:writePermission="id.dicoding.expertcourse.WRITE_DATABASE"/>
+        <receiver android:name=".widget.FavoriteMovieWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/favorite_movie_widget_info" />
+        </receiver>
+
+        <service
+            android:name=".widget.FavoriteMovieStackWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"/>
     </application>
+    <permission android:name="id.dicoding.expertcourse.WRITE_DATABASE" android:protectionLevel="normal"/>
+
+    <permission android:name="id.dicoding.expertcourse.READ_DATABASE" android:protectionLevel="normal"/>
 
 </manifest>
