--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="id.dicoding.expertcourse">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -12,8 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".SettingActivity"/>
         <activity android:name=".DetailActivity" />
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,12 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <provider
             android:name=".content_provider.FavoriteMovieProvider"
             android:authorities="id.dicoding.expertcourse"
             android:exported="true"
             android:readPermission="id.dicoding.expertcourse.READ_DATABASE"
-            android:writePermission="id.dicoding.expertcourse.WRITE_DATABASE"/>
+            android:writePermission="id.dicoding.expertcourse.WRITE_DATABASE" />
+
         <receiver android:name=".widget.FavoriteMovieWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -39,10 +39,16 @@
 
         <service
             android:name=".widget.FavoriteMovieStackWidgetService"
-            android:permission="android.permission.BIND_REMOTEVIEWS"/>
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
-    <permission android:name="id.dicoding.expertcourse.WRITE_DATABASE" android:protectionLevel="normal"/>
 
-    <permission android:name="id.dicoding.expertcourse.READ_DATABASE" android:protectionLevel="normal"/>
+    <permission
+        android:name="id.dicoding.expertcourse.READ_DATABASE"
+        android:protectionLevel="normal" />
+    <permission
+        android:name="id.dicoding.expertcourse.WRITE_DATABASE"
+        android:protectionLevel="normal" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
