--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.0.2"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "com.firebase:firebase-jobdispatcher:0.8.6"
     implementation "androidx.preference:preference:1.1.0"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation "androidx.recyclerview:recyclerview:1.0.0"
